menu jumpong issue

--- a/style.css
+++ b/style.css
@@ -2156,3 +2156,23 @@ a {
 .widget_calendar  #wp-calendar tbody tr td[colspan="6"] {
     width: calc(99.99% * 6/7);
 }
+
+
+/* main menu */
+
+
+nav.navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 9999999;
+    background: #000;
+    top: -200%;
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+}
+nav.navbar.affix{
+    opacity: 1;
+    visibility: visible;
+    top: 0 ;
+}
